# arc

./: .gitignore  Dockerfile  Dockerfile.arc  Makefile  README.md  pyproject.toml
arc/: config.py  kind.py  opts.py  scm.py
arc/cmd/: root.py
arc/core/: bar_client.py  bar_server.py  client_builder.py  foo.ipynb  foo_client.py  foo_server.py  lotsofunions_client.py  lotsofunions_server.py  resource.py  resource_test.py
arc/core/test/: bar.py  baz_client.py  baz_server.py
arc/data/: classifydigitsjob_server.py  job.py  job_test.py  util.py
arc/data/shapes/: classes.py
arc/image/: build.py  file.py
arc/model/: predictor.py  trainer.py  trainer_server.py  types.ipynb  types.py  util.py
arc/serve/: bar_server.py  foo_server.py  model_client.py  server.ipynb  server.py  server_test.py
arc/tune/: tunable.py
docs/: artifacts.md  finder.md  functions.md  io.md  jobs.md  models.md  predictor.md  router.md  trainer.md
docs/internal/: marketing.md
examples/imdb/hf/: README.md  environment.yml
examples/mnist/: README.md  classifier.py  convmulticlassimageclassifier_server.py
examples/mnist/job/: README.md  job.py  pyproject.toml
examples/mnist/keras/: arc.yaml  classifier.py  requirements.txt
examples/mnist/models/keras/: README.md  arc.yaml  classifier.py  convimgclassifier_server.py  requirements.txt  test.ipynb  test.py
examples/mnist/models/torch/: .env  classifier.py
examples/mnist/torch/: classifier.py  environment.yml
